# smlibppm

./: .gitignore  README.md  __main__.py  conf.py  pyproject.toml
docs/source/: conf.py  index.rst
examples/: __main__.py  circle_example.py  colorful_rect.ppm  pog.ppm
lib/: old_ppm.py  ppm.py
smlibppm/: __init__.py
smlibppm/api/: __init__.py
smlibppm/core/: circle.py  error.py  line.py  noise.py  pixel.py  png.py  ppm.py  rect.py  utils.py
src/: __main__.py
tests/: test.py
